Fixed secondary nav overflow bug

--- a/app/assets/stylesheets/_core/_nav.sass
+++ b/app/assets/stylesheets/_core/_nav.sass
@@ -123,11 +123,11 @@
   @extend %helvetica-neue
   @extend %uppercase
   right: 0
+  text-align: right
 
 .nav__item--secondary
   @extend %small-type
-  float: left
-  display: block
+  @extend %inline-block
   padding: 7px 8px 7px
   line-height: 18px
   color: $nav-secondary-type
